agora_cpp/CSharp_RTC_SDK/src/cross-platform-sdk-module/rtc/c_api/cross_platform_c_api_wrapper.h

typedef unsigned int uid_t;
enum ERROR_CODE {
    ERROR_OK = 0,
    ERROR_INVALID_API_TYPE = -100,
    ERROR_INVALID_PARAM = -101,
    ERROR_PARSE_PARAMETER = -102,
    ERROR_NO_CURRENT_PARAMETER = -103,
    ERROR_NOT_SUPPORT_API = -4,
    ERROR_NOT_INITIALIZE_OBSERVER = -104,
    ERROR_NO_DEVICE = -105,
    ERROR_ENGINE_EXIST = -106,
    ERROR_NO_ENGINE = -107,
    ERROR_INVALID_DEVICE_TYPE = -108,
};
struct VideoEncoderConfiguration {
    struct VideoDimensions dimensions;
    enum FRAME_RATE frameRate;
    int minFrameRate;
    int bitrate;
    int minBitrate;
    enum ORIENTATION_MODE orientationMode;
    enum DEGRADATION_PREFERENCE degradationPreference;
    enum VIDEO_MIRROR_MODE_TYPE mirrorMode;
};
typedef void (*FUNC_OnApiExecuted)(int err, const char* api, const char* result);
typedef void (*FUNC_OnFirstLocalAudioFrame)(int elapsed);
typedef void (*FUNC_OnFirstRemoteAudioFrame)(uid_t userId, int elapsed);
typedef void (*FUNC_OnLastmileQuality)(int quality);
typedef void (*FUNC_OnAudioQuality)(uid_t userId, int quality, unsigned short delay, unsigned short lost);
typedef void (*FUNC_OnStreamInjectedStatus)(const char* url, uid_t userId, int status);
typedef void (*FUNC_OnStreamUnpublished)(const char* url);
typedef void (*FUNC_OnStreamPublished)(const char* url, int error);
typedef void (*FUNC_OnStreamMessageError)(uid_t userId, int streamId, int code, int missed, int cached);
typedef void (*FUNC_OnStreamMessage)(uid_t userId, int streamId, const char* data, size_t length);
typedef void (*FUNC_OnConnectionBanned)();
typedef void (*FUNC_OnRemoteVideoTransportStats)(uid_t uid, unsigned short delay, unsigned short lost, unsigned short rxKBitRate);
typedef void (*FUNC_OnRemoteAudioTransportStats)(uid_t uid, unsigned short delay, unsigned short lost, unsigned short rxKBitRate);
typedef void (*FUNC_OnTranscodingUpdated)();
typedef void (*FUNC_OnAudioDeviceVolumeChanged)(int deviceType, int volume, BOOL muted);
typedef void (*FUNC_OnActiveSpeaker)(uid_t userId);
typedef void (*FUNC_OnMediaEngineStartCallSuccess)();
typedef void (*FUNC_OnMediaEngineLoadSuccess)();
typedef void (*FUNC_OnVideoStopped)();
typedef void (*FUNC_OnTokenPrivilegeWillExpire)(const char* token);
typedef void (*FUNC_OnNetworkQuality)(uid_t uid, int txQuality, int rxQuality);
typedef void (*FUNC_OnLocalVideoStats)(int sentBitrate, int sentFrameRate, int encoderOutputFrameRate, int rendererOutputFrameRate, int targetBitrate, int targetFrameRate, int qualityAdaptIndication, int encodedBitrate, int encodedFrameWidth, int encodedFrameHeight, int encodedFrameCount, int codecType);
typedef void (*FUNC_OnRemoteVideoStats)(uid_t uid, int delay, int width, int height, int receivedBitrate, int decoderOutputFrameRate, int rendererOutputFrameRate, int packetLossRate, int rxStreamType, int totalFrozenTime, int frozenRate, int totalActiveTime);
typedef void (*FUNC_OnRemoteAudioStats)(uid_t uid, int quality, int networkTransportDelay, int jitterBufferDelay, int audioLossRate, int numChannels, int receivedSampleRate, int receivedBitrate, int totalFrozenTime, int frozenRate, int totalActiveTime);
typedef void (*FUNC_OnLocalAudioStats)(int numChannels, int sentSampleRate, int sentBitrate);
typedef void (*FUNC_OnFirstLocalVideoFrame)(int width, int height, int elapsed);
typedef void (*FUNC_OnFirstRemoteVideoFrame)(uid_t uid, int width, int height, int elapsed);
typedef void (*FUNC_OnUserEnableVideo)(uid_t uid, BOOL enabled);
typedef void (*FUNC_OnAudioDeviceStateChanged)(const char* deviceId, int deviceType, int deviceState);
typedef void (*FUNC_OnCameraReady)();
typedef void (*FUNC_OnCameraFocusAreaChanged)(int x, int y, int width, int height);
typedef void (*FUNC_OnCameraExposureAreaChanged)(int x, int y, int width, int height);
typedef void (*FUNC_OnRemoteAudioMixingBegin)();
typedef void (*FUNC_OnRemoteAudioMixingEnd)();
typedef void (*FUNC_OnAudioEffectFinished)(int soundId);
typedef void (*FUNC_OnVideoDeviceStateChanged)(const char* deviceId, int deviceType, int deviceState);
typedef void (*FUNC_OnRemoteVideoStateChanged)(uid_t uid, int state, int reason, int elapsed);
typedef void (*FUNC_OnUserEnableLocalVideo)(uid_t uid, BOOL enabled);
typedef void (*FUNC_OnLocalPublishFallbackToAudioOnly)(BOOL isFallbackOrRecover);
typedef void (*FUNC_OnRemoteSubscribeFallbackToAudioOnly)(uid_t uid, BOOL isFallbackOrRecover);
typedef void (*FUNC_OnConnectionStateChanged)(int state, int reason);
typedef void (*FUNC_OnRtmpStreamingStateChanged)(const char* url, int state, int errCode);
typedef void (*FUNC_OnLocalUserRegistered)(uid_t uid, const char* userAccount);
typedef void (*FUNC_OnUserInfoUpdated)(uid_t uid, uid_t userUid, char* userAccount);
typedef void (*FUNC_OnLocalAudioStateChanged)(int state, int error);
typedef void (*FUNC_OnRemoteAudioStateChanged)(uid_t uid, int state, int reason, int elapsed);
typedef void (*FUNC_OnStreamInjectedStatus)(const char* url, uid_t uid, int status);
typedef void (*FUNC_OnCaptureVideoFrame)(int videoFrameType, int width, int height, int yStride, void* yBuffer, int rotation, int64_t renderTimeMs);
typedef void (*FUNC_OnRenderVideoFrame)(unsigned int uid, int videoFrameType, int width, int height, int yStride, void* yBuffer, int rotation, int64_t renderTimeMs);
typedef void (*FUNC_OnRecordAudioFrame)(int type, int samples, int bytesPerSample, int channels, int samplesPerSec, void* buffer, int64_t renderTimeMs, int avsync_type);
typedef void (*FUNC_OnPlaybackAudioFrame)(int type, int samples, int bytesPerSample, int channels, int samplesPerSec, void* buffer, int64_t renderTimeMs, int avsync_type);
typedef void (*FUNC_OnMixedAudioFrame)(int type, int samples, int bytesPerSample, int channels, int samplesPerSec, void* buffer, int64_t renderTimeMs, int avsync_type);
typedef void (*FUNC_OnPlaybackAudioFrameBeforeMixing)(unsigned int uid, int type, int samples, int bytesPerSample, int channels, int samplesPerSec, void* buffer, int64_t renderTimeMs, int avsync_type);
typedef void (*FUNC_OnPullAudioFrame)(int type, int samples, int bytesPerSample, int channels, int samplesPerSec, void* buffer, int64_t renderTimeMs, int avsync_type);
typedef void (*FUNC_OnAudioMixingStateChanged)(int audioMixingStateType, int audioMixingErrorType);
typedef void (*FUNC_OnFirstRemoteAudioDecoded)(uid_t uid, int elapsed);
typedef void (*FUNC_OnLocalVideoStateChanged)(int localVideoState, int error);
typedef void (*FUNC_OnNetworkTypeChanged)(int networkType);
typedef void (*FUNC_OnLastmileProbeResult)(int state, unsigned int upLinkPacketLossRate, unsigned int upLinkjitter, unsigned int upLinkAvailableBandwidth, unsigned int downLinkPacketLossRate, unsigned int downLinkJitter, unsigned int downLinkAvailableBandwidth, unsigned int rtt);
typedef BOOL (*FUNC_OnSendAudioPacket)(const unsigned char* buffer, void* size);
typedef BOOL (*FUNC_OnSendVideoPacket)(const unsigned char* buffer, void* size);
typedef BOOL (*FUNC_OnReceiveAudioPacket)(const unsigned char* buffer, void* size);
typedef BOOL (*FUNC_OnReceiveVideoPacket)(const unsigned char* buffer, void* size);
typedef BOOL (*FUNC_OnReadyToSendMetadata)();
typedef void (*FUNC_OnMetadataReceived)(unsigned int uid, unsigned int size, unsigned char* buffer, long long timeStampMs);
typedef int (*FUNC_OnGetMaxMetadataSize)();
typedef void (*FUNC_OnTestEnd)();
typedef void* IRtcEngineBridge_ptr;
extern "C" DllExport enum ERROR_CODE
setVideoEncoderConfiguration(IRtcEngineBridge_ptr apiBridge, const struct VideoEncoderConfiguration config);
typedef void (*FUNC_APICaseHandler)(int apiType, const char *paramter);