OneToOneVideo/OneToOneVideo/agorartc/AgoraRtcApiNative.cs


    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnApiExecuted(int err, string api, string result);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnFirstLocalAudioFrame(int elapsed);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnFirstRemoteAudioFrame(uint userId, int elapsed);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnLastmileQuality(int quality);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnAudioQuality(uint userId, int quality, ushort delay, ushort lost);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnStreamInjectedStatus(string url, uint userId, int status);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnStreamUnpublished(string url);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnStreamPublished(string url, int error);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnStreamMessageError(uint userId, int streamId, int code, int missed, int cached);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnStreamMessage(uint userId, int streamId, string data, uint length);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnConnectionBanned();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnRemoteVideoTransportStats(uint uid, ushort delay, ushort lost, ushort rxKBitRate);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnRemoteAudioTransportStats(uint uid, ushort delay, ushort lost, ushort rxKBitRate);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnTranscodingUpdated();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnAudioDeviceVolumeChanged(int deviceType, int volume, int muted);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnActiveSpeaker(uint userId);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnMediaEngineStartCallSuccess();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnMediaEngineLoadSuccess();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnVideoStopped();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnTokenPrivilegeWillExpire(string token);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnNetworkQuality(uint uid, int txQuality, int rxQuality);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnLocalVideoStats(int sentBitrate, int sentFrameRate, int encoderOutputFrameRate,
        int rendererOutputFrameRate, int targetBitrate, int targetFrameRate, int qualityAdaptIndication,
        int encodedBitrate, int encodedFrameWidth, int encodedFrameHeight, int encodedFrameCount, int codecType);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnRemoteVideoStats(uint uid, int delay, int width, int height, int receivedBitrate,
        int decoderOutputFrameRate, int rendererOutputFrameRate, int packetLossRate, int rxStreamType,
        int totalFrozenTime, int frozenRate, int totalActiveTime);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnRemoteAudioStats(uint uid, int quality, int networkTransportDelay,
        int jitterBufferDelay, int audioLossRate, int numChannels, int receivedSampleRate, int receivedBitrate,
        int totalFrozenTime, int frozenRate, int totalActiveTime);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnLocalAudioStats(int numChannels, int sentSampleRate, int sentBitrate);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnFirstLocalVideoFrame(int width, int height, int elapsed);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnFirstRemoteVideoFrame(uint uid, int width, int height, int elapsed);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnUserEnableVideo(uint uid, int enabled);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnAudioDeviceStateChanged(string deviceId, int deviceType, int deviceState);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnCameraReady();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnCameraFocusAreaChanged(int x, int y, int width, int height);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnCameraExposureAreaChanged(int x, int y, int width, int height);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnRemoteAudioMixingBegin();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnRemoteAudioMixingEnd();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnAudioEffectFinished(int soundId);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnVideoDeviceStateChanged(string deviceId, int deviceType, int deviceState);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnRemoteVideoStateChanged(uint uid, int state, int reason, int elapsed);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnUserEnableLocalVideo(uint uid, int enabled);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnLocalPublishFallbackToAudioOnly(int isFallbackOrRecover);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnRemoteSubscribeFallbackToAudioOnly(uint uid, int isFallbackOrRecover);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnConnectionStateChanged(int state, int reason);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnRtmpStreamingStateChanged(string url, int state, int errCode);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnLocalUserRegistered(uint uid, string userAccount);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnUserInfoUpdated(uint uid, uint userUid, string userAccount);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnLocalAudioStateChanged(int state, int error);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnRemoteAudioStateChanged(uint uid, int state, int reason, int elapsed);

    // raw data callback
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnCaptureVideoFrame(int videoFrameType, int width, int height, int yStride,
        IntPtr yBuffer, int rotation, long renderTimeMs);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnRenderVideoFrame(uint uid, int videoFrameType, int width, int height, int yStride,
        IntPtr yBuffer, int rotation, long renderTimeMs);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnRecordAudioFrame(int type, int samples, int bytesPerSample, int channels,
        int samplesPerSec, IntPtr buffer, long renderTimeMs, int avsync_type);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnPlaybackAudioFrame(int type, int samples, int bytesPerSample, int channels,
        int samplesPerSec, IntPtr buffer, long renderTimeMs, int avsync_type);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnMixedAudioFrame(int type, int samples, int bytesPerSample, int channels,
        int samplesPerSec, IntPtr buffer, long renderTimeMs, int avsync_type);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnPlaybackAudioFrameBeforeMixing(uint uid, int type, int samples, int bytesPerSample,
        int channels, int samplesPerSec, IntPtr buffer, long renderTimeMs, int avsync_type);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnPullAudioFrame(int type, int samples, int bytesPerSample, int channels,
        int samplesPerSec, IntPtr buffer, long renderTimeMs, int avsync_type);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnAudioMixingStateChanged(int audioMixingStateType, int audioMixingErrorType);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnFirstRemoteAudioDecoded(uint uid, int elapsed);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnLocalVideoStateChanged(int localVideoState, int error);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnNetworkTypeChanged(int networkType);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnLastmileProbeResult(int state, uint upLinkPacketLossRate, uint upLinkjitter,
        uint upLinkAvailableBandwidth, uint downLinkPacketLossRate, uint downLinkJitter,
        uint downLinkAvailableBandwidth, uint rtt);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate int FUNC_OnSendAudioPacket(byte buffer, IntPtr size);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate int FUNC_OnSendVideoPacket(byte buffer, IntPtr size);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate int FUNC_OnReceiveAudioPacket(IntPtr buffer, IntPtr size);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate int FUNC_OnReceiveVideoPacket(IntPtr buffer, IntPtr size);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate int FUNC_OnReadyToSendMetadata();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnMetadataReceived(uint uid, uint size, IntPtr buffer, long timeStampMs);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate int FUNC_OnGetMaxMetadataSize();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnTestEnd();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_APICaseHandler(int apiType, string paramter);

    internal class AgorartcNative
    {
        /** (Recommended) The standard bitrate set in the \ref IRtcEngine::setVideoEncoderConfiguration "setVideoEncoderConfiguration" method.
	
		 In this mode, the bitrates differ between the live interactive streaming and communication profiles:
		
		 - `COMMUNICATION` profile: The video bitrate is the same as the base bitrate.
		 - `LIVE_BROADCASTING` profile: The video bitrate is twice the base bitrate.
		
		 */
        internal const int STANDARD_BITRATE = 0;

        /** The compatible bitrate set in the \ref IRtcEngine::setVideoEncoderConfiguration "setVideoEncoderConfiguration" method.
